# FB 2025-04-14: based on ADEL and hydroshoot, sphinx pkg in environment.yml
[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
  ]
build-backend = "setuptools.build_meta"

# allow openalea to be a namespace package
[tool.setuptools.packages.find]
where = ["src"]

# enable dynamic versioning based on git tags
[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm

[project]
name = "openalea.numpy"
authors = [
  { name = "Christophe Pradal" },
]
description = "Numpy modules for Visualea."
readme = "README.rst"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.0"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

dependencies = [
    "numpy",
]


# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "openalea.core",
    "openalea.stdlib"
]

[project.optional-dependencies]
test = ["pytest"]
notebook = ["jupyter"]
doc = [
  "sphinx-favicon",
  "sphinx-rtd-theme",
  "pydata-sphinx-theme",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
]

[project.urls]
Homepage = "https://openalea.rtfd.io"
"Bug Tracker" = "https://github.com/openalea/openalea-components/issues"
Discussions = "https://github.com/openalea/openalea-components/discussions"
Changelog = "https://github.com/openalea/openalea-components/releases"

[tool.setuptools.package-data]
"numpy" = ["*.csv"]

[project.entry-points."wralea"]
"openalea.numpy" = "openalea.numpy_wralea"
"openalea.numpy.random" = "openalea.numpy_wralea.random"
"openalea.numpy.creation" = "openalea.numpy_wralea.creation"
"openalea.numpy.infos" = "openalea.numpy_wralea.infos"
"openalea.numpy.input_output" = "openalea.numpy_wralea.input_output"
"openalea.numpy.manipulation" = "openalea.numpy_wralea.manipulation"
"openalea.numpy.math" = "openalea.numpy_wralea.math"
"openalea.numpy.sorting_searching" = "openalea.numpy_wralea.sorting_searching"
"openalea.numpy.window" = "openalea.numpy_wralea.window"
"openalea.numpy.demo" = "openalea.numpy_demo_wralea"
"openalea.numpy.test" = "openalea.numpy_test_wralea"
