# FB 2025-04-14: based on ADEL and hydroshoot, sphinx pkg in environment.yml
[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
  ]
build-backend = "setuptools.build_meta"

# allow openalea to be a namespace package
[tool.setuptools.packages.find]
where = ["src"]

# enable dynamic versioning based on git tags
[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm

[project]
name = "openalea.stdlib"
authors = [
  { name = "Christophe Pradal" },
]
description = "OpenAlea standard logical component library."
readme = "README.rst"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.0"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

dependencies = [
    "ipykernel",
    "configobj",
]


# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "openalea.core"
]

[project.optional-dependencies]
test = ["pytest"]
notebook = ["jupyter"]
doc = [
  "sphinx-favicon",
  "sphinx-rtd-theme",
  "pydata-sphinx-theme",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
]

[project.urls]
Homepage = "https://openalea.rtfd.io"
"Bug Tracker" = "https://github.com/openalea/openalea-components/issues"
Discussions = "https://github.com/openalea/openalea-components/discussions"
Changelog = "https://github.com/openalea/openalea-components/releases"

[tool.setuptools.package-data]
"stdlib" = ["*.csv"]

[project.entry-points."wralea"]
"openalea.color" = "openalea.color"
"openalea.csv" = "openalea.csv"
"openalea.string" = "openalea.string"
"openalea.data" = "openalea.data"
"openalea.datafile" = "openalea.datafile"
"openalea.file" = "openalea.file"
"openalea.functional" = "openalea.functional"
"openalea.math" = "openalea.math" 
"openalea.model" = "openalea.model"
"openalea.pickling" = "openalea.pickling" 
"openalea.plotools" = "openalea.plotools"
"openalea.python" = "openalea.python"
"openalea.spatial" = "openalea.spatial"
"openalea.stand" = "openalea.stand"
"openalea.stat" = "openalea.stat"
"openalea.system" = "openalea.system"
"openalea.tutorial" = "openalea.tutorial"
"openalea.tutorial.design pattern" = "openalea.tutorial.pattern"
"openalea.tutorial.functional" = "openalea.tutorial.functional"
"openalea.tutorial.multiprocess" = "openalea.tutorial.multiprocess"
"openalea.multiprocessing" = "openalea.multiprocessing"
"openalea.path" = "openalea.path"
# Deprecated
"catalog.color" = "deprecated" 
"catalog.data" = "deprecated"
"catalog.csv" = "deprecated" 
"catalog.file" = "deprecated"
"catalog.functional" = "deprecated"
"catalog.math" = "deprecated" 
"catalog.model" = "deprecated"
"catalog.pickling" = "deprecated" 
"catalog.python" = "deprecated"
"catalog.string" = "deprecated"
